# kaggle-tabular-classification-titanic

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: 00_eda.html  00_eda.ipynb  01_baseline_train.html  01_baseline_train.ipynb  02_improve_train.html  02_improve_train.ipynb  submission.csv  submission_20260107-14-11-01.csv  submission_20260107-16-23-42.csv  submission_baseline_20260108-14-10-51.csv  submission_baseline_FE_20260108-15-59-19.csv  submission_xgb_20260108-17-36-20.csv  submission_xgb_20260113-11-50-18.csv
outputs/params/: best_params.json
src/: __init__.py  config.py  features.py  predict.py  preprocess.py  train.py  train_utils.py
