[project]
name = "kaggle-tabular-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
 "jupyter",
 "matplotlib>=3.10.8",
 "numpy",
 "pandas",
 "scikit-learn",
 "torch",
 "torchvision",
]

[tool.uv]
dev-dependencies = [
    "ipykernel",
]
