[project]
name = "kaggle-tabular-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
 "jupyter",
 "matplotlib>=3.10.8",
 "numpy",
 "pandas",
 "scikit-learn",
 "torch",
 "torchvision",
 "tqdm>=4.67.1",
]

[tool.uv]
dev-dependencies = [
    "ipykernel",
]
